WIP: refactoring. Fixed the update function
