# app/controllers/SkillMatrixController.scala
@@ -3,8 +3,7 @@ package controllers
 import javax.inject.Inject
 
 import io.kanaka.monadic.dsl._
-import models.{SkillMatrix, SkillMatrixItem, Tech}
-import org.omg.CosNaming.NamingContextPackage.NotFound
+import models.{Skill, SkillMatrixItem, Tech}
 import play.api.libs.json._
 import play.api.mvc._
 import services.{SkillMatrixDAOService, TechDAOService}
@@ -16,12 +15,10 @@ import scala.concurrent.ExecutionContext.Implicits.global
   * Skill Matrix Controller.
   * The controller is responsible for the operations related to a users's skills.
   */
-
-
 class SkillMatrixController @Inject()(skillMatrixDAOService: SkillMatrixDAOService,
                                       techDAOService: TechDAOService) extends Controller {
 
-  def addSkillByUserId(userId: Int) = Action.async(BodyParsers.parse.json) {
+  def addSkill(userId: Int) = Action.async(BodyParsers.parse.json) {
     request =>
       for {
         skillMatrixItem: SkillMatrixItem <- request.body.validate[SkillMatrixItem] ?|
@@ -35,7 +32,7 @@ class SkillMatrixController @Inject()(skillMatrixDAOService: SkillMatrixDAOServi
             skillLevel = createdSkill.skillLevel))))
   }
 
-  def updateSkillByUserId(userId: Int, skillId: Int) = Action.async(BodyParsers.parse.json) {
+  def updateSkill(userId: Int, skillId: Int) = Action.async(BodyParsers.parse.json) {
     request =>
       for {
         skillMatrixItem: SkillMatrixItem <- request.body.validate[SkillMatrixItem] ?|
@@ -48,34 +45,34 @@ class SkillMatrixController @Inject()(skillMatrixDAOService: SkillMatrixDAOServi
       } yield Ok(Json.obj("updatedSkill" -> Json.toJson(skillMatrixItem)))
   }
 
-  def deleteSkillByUserSkillId(userId: Int, userSkillId: Int) = Action.async(BodyParsers.parse.empty) { _ =>
+  def deleteSkill(userId: Int, userSkillId: Int) = Action.async(BodyParsers.parse.empty) { _ =>
     skillMatrixDAOService.deleteSkillByUserId(userId, userSkillId).map {
       case None => NotFound(Json.obj("message" -> "Skill for this user could not be found"))
       case _ => NoContent
    }
   }
 
-  def getSkillsByUserId(userId: Int) = Action.async(BodyParsers.parse.empty) { _ =>
+  def getUserSkills(userId: Int) = Action.async(BodyParsers.parse.empty) { _ =>
     skillMatrixDAOService.getAllSkillMatrixByUserId(userId).map {
       case None=> NotFound(Json.obj("message" -> "User not found"))
-      case m => Ok(Json.obj("user" -> Json.toJson(m)))
+      case m => Ok(Json.obj("userSkills" -> Json.toJson(m)))
     }
   }
 
-  def getSkills() = Action.async(BodyParsers.parse.empty) { _ =>
+  def getSkillMatrix() = Action.async(BodyParsers.parse.empty) { _ =>
     skillMatrixDAOService.getAllSkills().map ( result =>
       Ok(Json.obj("skills" -> Json.toJson(result)))
     )
   }
 
-  def getSkillByTechId(techId: Int) = Action.async(BodyParsers.parse.empty) { _ =>
+  def getSkillMatrixByTechId(techId: Int) = Action.async(BodyParsers.parse.empty) { _ =>
     skillMatrixDAOService.getSkillMatrixByTechId(techId).map(m =>
       Ok(Json.obj("skills" -> Json.toJson(m))))
   }
 
 
 
-  private def getSkillMatrixItem(skill: SkillMatrix): Future[SkillMatrixItem] = {
+  private def getSkillMatrixItem(skill: Skill): Future[SkillMatrixItem] = {
     for {
       tech <- techDAOService.getTechById(skill.techId)
     } yield SkillMatrixItem(tech = tech.get, skillLevel = skill.skillLevel)
